--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,7 +12,8 @@
     "pages/address/list/index",
     "pages/login/login",
     "pages/settings/settings",
-    "pages/profile/profile"
+    "pages/profile/profile",
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "light",
