--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,8 @@
     "pages/login/login",
     "pages/settings/settings",
     "pages/profile/profile",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/stores/numstores"
   ],
   "window": {
     "backgroundTextStyle": "light",
