更新了内容

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,8 +13,7 @@
     "pages/login/login",
     "pages/settings/settings",
     "pages/profile/profile",
-    "pages/test/test",
-    "pages/stores/numstores"
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "light",
