修复了首页和一级分类和二级分类的问题

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -10,6 +10,20 @@
     "miniprogram": {
       "list": [
         {
+          "name": "商品分类",
+          "pathName": "pages/category/category",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "商品分类",
+          "pathName": "pages/category/category",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "测试页面",
           "pathName": "pages/test/test",
           "query": "",
