实现了登录页面的请求

--- a/project.config.json
+++ b/project.config.json
@@ -35,6 +35,6 @@
     "tabIndent": "auto",
     "tabSize": 2
   },
-  "appid": "wx65793829748aff42",
+  "appid": "wxe4c660ef27bbb7b7",
   "srcMiniprogramRoot": "miniprogram/"
 }
