--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "scripts": {
+    "push": "cmd /c \"set HTTP_PROXY=http://127.0.0.1:7890 && set HTTPS_PROXY=http://127.0.0.1:7890 && git push\""
+  },
   "dependencies": {
-    "@vant/weapp": "^1.11.7"
+    "@vant/weapp": "^1.11.7",
+    "mobx-miniprogram": "^6.12.3",
+    "mobx-miniprogram-bindings": "^5.1.1"
   }
 }
