定义新增参数以及封装接口API、收集省市区数据

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -10,6 +10,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "新增收获地址",
+          "pathName": "modules/settingModule/pages/address/add/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "商品分类",
           "pathName": "pages/category/category",
           "query": "",
