封装购物车接口API

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,8 @@
     "pages/order/list/list",
     "pages/login/login",
     "pages/settings/settings",
-    "pages/test/test"
+    "pages/test/test",
+    "api/cart.js"
   ],
   "window": {
     "backgroundTextStyle": "light",
